# STCP

./: .gitignore  LICENSE.COMMERCIAL  README.md
LTE/stcp+mqtt-for-nRF9151-zephyr/app/stcp-mqtt-demo/testing/the_proxy/: Cargo.toml
SDK/C/sdk-static/: CMakeLists.txt  README.fi.md
SDK/C/stcp-common/: Cargo.toml
SDK/C/stcp-common/src/: mod.rs
SDK/C/stcp-server-lib/rust-c-wrapper/: Cargo.toml
SDK/C/stcp-server-lib/rust-c-wrapper/src/: lib.rs
SDK/Zephyr/: Cargo.toml  build-sdk.sh  generate_sdk.sh  module.yml
SDK/Zephyr/debug/: Cargo.toml
SDK/Zephyr/globals/src/: mod.rs
SDK/Zephyr/io-wrapper/src/: mod.rs
SDK/Zephyr/io-wrapper/src/listener/: linux.rs
SDK/Zephyr/io-wrapper/src/stream/: linux.rs  mod.rs
SDK/Zephyr/sdk-static/: CMakeLists.txt  LICENSE.txt
SDK/Zephyr/stcp-client-lib/: CMakeLists.txt  build-all.sh
SDK/Zephyr/stcp-client-lib/rust-c-wrapper/src/: lib.rs
SDK/Zephyr/stcp-client-lib/rust-client-lib/: check_lib.sh
SDK/Zephyr/stcp-client-lib/rust-client-lib/src/: lib.rs
SDK/Zephyr/stcp-client-lib/src/: main.c
SDK/Zephyr/stcp-crypto/: Cargo.toml
SDK/Zephyr/stcp-crypto/src/: aes_lib.rs  stcp_elliptic_codec.rs
SDK/Zephyr/stcp-defines/src/: defines.rs
SDK/Zephyr/stcp-server-lib/: CMakeLists.txt  build-log.txt
SDK/Zephyr/stcp-server-lib/rust-c-wrapper/demo/: main.c
SDK/Zephyr/stcp-server-lib/rust-c-wrapper/include/: stcp_server_cwrapper_lib.h
SDK/Zephyr/stcp-server-lib/rust-c-wrapper/src/: lib.rs
SDK/Zephyr/stcp-server-lib/rust-server-lib/: Cargo.toml
SDK/Zephyr/stcp-server-lib/rust-server-lib/src/: server.rs.turva
SDK/Zephyr/stcp-server-lib/src/: main.c
SDK/Zephyr/stcp-threads/: CMakeLists.txt
SDK/Zephyr/stcp-threads/src/: mod.rs
SDK/Zephyr/tools/: setup.sh
SDK/Zephyr/tools/musl-cross-compiled-libs/arm-linux-musleabi/lib/: libatomic.so.1.2.0  libitm.so.1.0.0  libssp.so.0.0.0
SDK/Zephyr/zephyr-misc/src/: dnshelper.rs  mod.rs  random.h  server_connection.rs  uart_console.rs
SDK/Zephyr/zephyr-sys/src/: build.rs  mod.rs
SDK/new-C/: Cargo.toml  clean-all.sh
SDK/new-C/debug/src/: mod.rs
SDK/new-C/dependencies/: build-all.sh
SDK/new-C/globals/: Cargo.toml
SDK/new-C/globals/src/: panic.rs
SDK/new-C/io-wrapper/src/listener/: .linux.rs.swp
SDK/new-C/io-wrapper/src/stream/: linux.rs  zephyr.rs
SDK/new-C/stcp-client-lib/rust-c-wrapper/: build.rs
SDK/new-C/stcp-client-lib/rust-client-lib/src/: client.rs
SDK/new-C/stcp-defines/src/: mod.rs
SDK/new-C/stcp-server-lib/: build-all.sh
SDK/new-C/stcp-server-lib/rust-c-wrapper/: Cargo.toml  build.rs
SDK/new-C/stcp-server-lib/rust-server-lib/src/: lib.rs
SDK/new-C/stcp-server-lib/tmp/: CMakeCache.txt
SDK/new-C/stcp-threads/: Cargo.toml
SDK/new-C/tools/: build-musl-toolchain.sh  config_build_variables
SDK/new-C/tools/musl-cross-compiled-libs/arm-linux-musleabi/lib/: libstdc++.la  libstdc++.so.6.0.28-gdb.py
SDK/new-C/utils/: Cargo.toml
SDK/new-C/utils/src/: mod.rs
SDK/new-C/zephyr-misc/: Cargo.toml
SDK/new-C/zephyr-misc/src/: mod.rs  modem_net.c  server_connection.rs
SDK/new-C/zephyr-sys/: CMakeLists.txt
SDK/new-C/zephyr-sys/src/: mod.rs
STCP_integrations/Rasberry PI/OOT-kernelmodule/rust/: Cargo.toml  mun.json
STCP_integrations/Rasberry PI/OOT-kernelmodule/rust/src/: crypto.rs  errorit.rs  module_handlers.rs
STCP_integrations/Zephyr/nRF9161dk/the-apps/stcp-zephyr-app/: CMakeLists.txt  cargo-build  modeemi-a-konffaus  prj.conf
STCP_integrations/Zephyr/nRF9161dk/the-apps/stcp-zephyr-app/include/: debug.h
STCP_integrations/Zephyr/nRF9161dk/the-apps/stcp-zephyr-app/rust/: ajo
STCP_integrations/Zephyr/nRF9161dk/the-apps/stcp-zephyr-app/src/: stcp_mqtt.c
STCPv1/LTE/stcp+mqtt-for-nRF9151-zephyr/app/stcp-mqtt-demo/: CMakeLists.txt  bt-build-command  capture.pcap  cargo-build  check-addr  flash  modeemi-a-all  modeemi-a-compile  modeemi-flash  muistilista.allokit  prj.conf  prj.conf.devaus_viime  prj.conf.viimeisin  stcp.handshake.pcap
STCPv1/LTE/stcp+mqtt-for-nRF9151-zephyr/app/stcp-mqtt-demo/src/: main.c  mqtt_demo_utils.h  stcp_mqtt.c
STCPv1/SDK/C/: .build_environment.env  Cargo.toml
STCPv1/SDK/C/dependencies/: compile_zlib.sh  config_zlib
STCPv1/SDK/C/sdk/: install-sdk.sh
STCPv1/SDK/C/sdk-static/cmake/: symbol_test.cmake
STCPv1/SDK/C/sdk/examples/server-demo/: main.c
STCPv1/SDK/C/sdk/include/: stcp_client.h  stcp_server.h
STCPv1/SDK/C/sdk/pkgconfig/: stcp-sdk.pc
STCPv1/SDK/C/stcp-client-lib/: build-log.txt  clean.sh  greppi.txt
STCPv1/SDK/C/stcp-client-lib/build-scripts/: copy_header.sh
STCPv1/SDK/C/stcp-client-lib/rust-c-wrapper/: Cargo.toml  config.h.in
STCPv1/SDK/C/stcp-client-lib/rust-c-wrapper/demo/: main.c
STCPv1/SDK/C/stcp-client-lib/rust-client-lib/: Cargo.toml
STCPv1/SDK/C/stcp-common/src/: aes_lib.rs  defines_etc.rs  utils.rs
STCPv1/SDK/C/tools/: build-musl-toolchain.sh  config_build_variables  mkZip.sh  setup.sh
STCPv1/SDK/Zephyr/io-wrapper/: Cargo.toml
STCPv1/SDK/Zephyr/stcp-defines/: Cargo.toml
STCPv1/SDK/Zephyr/stcp-defines/src/: mod.rs
STCPv1/SDK/new-C/stcp-client-lib/rust-c-wrapper/: Cargo.toml
STCPv1/SDK/new-C/stcp-client-lib/rust-client-lib/: Cargo.toml
STCPv1/SDK/new-C/stcp-types/: Cargo.toml
STCPv1/SDK/new-C/stcp-types/include/: stcp_types.h
STCPv1/SDK/new-C/stcp-types/src/: mod.rs  types.rs
STCPv1/SDK/new-C/zephyr-sys/: Cargo.toml
STCPv2/linux-kernel/linux-module/rust/: Cargo.toml  Makefile
STCPv2/linux-kernel/linux-module/rust/.cargo/: config.toml
STCPv2/linux-kernel/linux-module/rust/src/: byte_queue.rs  carrier.rs  crypto.rs  error.rs  ffi.integration.rs  ffi.rs  frame.rs  lib.rs  packet.rs  session.integration.rs  session.rs  state.integration.rs  state.rs  system_memory_allocator.rs  transport.rs
kernel-module/rust/stcp_core/: Cargo.toml
kernel-module/rust/stcp_core/src/: crypto.rs  error.rs  handshake.rs  lib.rs  packet.rs  types.rs
kernel-module/rust/the_rust_implementation/: Cargo.toml  ith_lock,with_context_lock,g
kernel-module/rust/the_rust_implementation/src/: abi.rs  ctx.rs  debug.rs  encrypted_io.rs  error.rs  ffi.rs  header.rs  lib.rs
(+3153 files in other folders)
