[workspace]
resolver = "2"
members = [
    "globals",
    "utils",
    "debug",
    "zephyr-sys",
    "zephyr-misc",
    "io-wrapper",
    "stcp-defines",
    "stcp-types",
    "stcp-threads",
    "stcp-crypto",
    "stcp-client-lib/rust-client-lib",
    "stcp-client-lib/rust-c-wrapper",
    "stcp-server-lib/rust-server-lib",
    "stcp-server-lib/rust-c-wrapper"
]

[workspace.dependencies]
utils = { path = "utils" }
globals = { path = "globals" }
iowrapper = { path = "io-wrapper" }
zephyrsys = { path = "zephyr-sys" }
zephyrmisc = { path = "zephyr-misc" }
stcpcrypto = { path = "stcp-crypto" }
stcptypes = { path = "stcp-types" }
stcpdefines = { path = "stcp-defines" }
stcpthreads = { path = "stcp-threads" }
debug = { path = "debug" }
stcpclientlib = { path = "stcp-client-lib/rust-client-lib" }
stcpserverlib = { path = "stcp-server-lib/rust-server-lib" }
base64 = { version = "0.21",  features = ["alloc"] }
hex = { version = "0.4.3" }
aes-gcm = { version = "0.10",  features = ["aes", "alloc"] }
aes = { version = "0.8" }
aead = { version = "0.5" }
heapless = { version = "0.7" }
spin = { version = "0.9",  features = ["mutex", "spin_mutex"] }
dlmalloc = { version = "0.2" }
p256 = { version = "0.13",  features = ["ecdh", "arithmetic"] }
libc = { version = "0.2" }
getrandom = { version = "0.2",  features = ["custom" ] }
rand = { version = "0.9" }
rand_core = { version = "0.6",  features = ["getrandom"] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
