[package]
name = "zephyrmisc"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
aes = { workspace = true }
aead = { workspace = true }
heapless = { workspace = true }
spin = { workspace = true }
dlmalloc = { workspace = true }
stcpdefines = { workspace = true }
stcptypes = { workspace = true }
stcpcrypto = { workspace = true }
iowrapper = { workspace = true }
debug = { workspace = true }
utils = { workspace = true }

[lib]
name = "zephyrmisc"
path = "src/mod.rs"
crate-type = ["rlib", "staticlib"]

[features]
default = []
std = []
zephyr = []
linux = []
cbindgen = []

