[package]
name = "stcpdefines"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
aes = { workspace = true }
aead = { workspace = true }
heapless = { workspace = true }
spin = { workspace = true }
dlmalloc = { workspace = true }
p256 = { workspace = true }
globals = { workspace = true }

[lib]
name = "stcpdefines"
path = "src/mod.rs"
crate-type = ["rlib", "staticlib"]

[features]
default = []
std = []
zephyr = []
linux = []
cbindgen = []

