[package]
name = "stcp-kernel-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"
lto = false
codegen-units = 1

[dependencies]
# Deliberately dependency-free skeleton. Replace crypto.rs backend with
# kernel Crypto API FFI or vetted no_std crates compatible with kernel rules.
