[package]
name = "stcp-kernel-core"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "stcp_kernel_core"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = false
codegen-units = 1
debug = true
strip = false

[dependencies]
