[package]
name = "stcp_client_cwrapper_lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
stcpclientlib = { workspace = true }
stcpcommon = { workspace = true }
tokio = { workspace = true }

[lib]
name = "stcp_client_cwrapper_lib"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[build-dependencies]
cbindgen = "0.26"

[features]
default = []
cbindgen = []
