[package]
name = "stcp-proxy"
version = "0.1.0"
edition = "2021"


[dependencies]
the_stcp_kernel_module = { path = "/home/pomo/ncs/stcp-modeemi/moduuli-tcp/rust/", features = ["std", "stcp_debug"] }
aes-gcm = { version = "0.10", default-features = false, features = ["alloc", "aes"] }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
byteorder = { version = "1", default-features = false }
libc = { version = "0.2", default-features = false }
p256 = { version = "0.13", features = ["ecdh"] }
env = "1.0.1"
nix = { version = "0.31.2", features = ["poll"] }
crossbeam = "0.8.4"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
cc = "1.0"

[features]
stcp_debug = []
std = []
zephyr = []
linux = []

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[build-dependencies]
cc = "1.0"
